--- a/components/Animations/ScrollFloat.module.css
+++ b/components/Animations/ScrollFloat.module.css
@@ -1,4 +1,4 @@
-.scrollFloat {
+/* .scrollFloat {
   overflow: hidden;
   text-align: center;
 }
@@ -13,4 +13,4 @@
 
 .char {
   display: inline-block;
-}
+} */
